fix import issues